--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -6,10 +6,28 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "add": "^2.0.6",
+    "axios": "^0.21.4",
+    "firebase": "^9.0.2",
+    "i18next": "^20.6.1",
+    "jquery": "^3.6.0",
+    "pretty-checkbox": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.12.0",
+    "react-redux": "^7.2.5",
+    "react-responsive": "^9.0.0-beta.4",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-slick": "^0.28.1",
+    "redux-actions": "^2.6.5",
+    "redux-promise": "^0.6.0",
+    "rss-to-json": "^2.0.2",
+    "sass": "^1.41.1",
+    "store": "^2.0.12",
+    "styled-components": "^5.3.1",
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.11"
   },
   "scripts": {
     "start": "react-scripts start",
