--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "add": "^2.0.6",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
     "firebase": "^9.0.2",
     "i18next": "^20.6.1",
     "jquery": "^3.6.0",
