--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -26,6 +26,7 @@
     "redux-promise": "^0.6.0",
     "rss-to-json": "^2.0.2",
     "sass": "^1.41.1",
+    "slick-carousel": "^1.8.1",
     "store": "^2.0.12",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1",
