--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -13,10 +13,12 @@
     "firebase": "^9.0.2",
     "i18next": "^20.6.1",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "pretty-checkbox": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.12.0",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.5",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.3.0",
