--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -16,6 +16,8 @@
     "moment": "^2.29.1",
     "pretty-checkbox": "^3.0.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.12.0",
     "react-moment": "^1.1.1",
