--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -10,8 +10,10 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "dotenv": "^10.0.0",
+    "enzyme": "^3.11.0",
     "firebase": "^9.0.2",
     "i18next": "^20.6.1",
+    "jest-enzyme": "^7.1.2",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "pretty-checkbox": "^3.0.3",
@@ -25,6 +27,7 @@
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
     "react-slick": "^0.28.1",
     "redux-actions": "^2.6.5",
     "redux-promise": "^0.6.0",
@@ -59,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3"
   }
 }
