--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -24,6 +24,8 @@
     "react-i18next": "^11.12.0",
     "react-moment": "^1.1.1",
     "react-password-strength-bar": "^0.4.0",
+    "react-phone-input-2": "^2.14.0",
+    "react-phone-number-input": "^3.1.34",
     "react-redux": "^7.2.5",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.3.0",
