--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "enzyme": "^3.11.0",
     "firebase": "^9.0.2",
     "i18next": "^20.6.1",
