--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -28,12 +29,13 @@
     "react-password-strength-bar": "^0.4.0",
     "react-phone-input-2": "^2.14.0",
     "react-phone-number-input": "^3.1.34",
-    "react-redux": "^7.2.5",
+    "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
     "redux-promise": "^0.6.0",
     "rss-to-json": "^2.0.2",
