--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.7.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -17,6 +18,7 @@
     "i18next": "^20.6.1",
     "jest-enzyme": "^7.1.2",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "pretty-checkbox": "^3.0.3",
     "react": "^17.0.2",
