--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.12.0",
+    "react-image-crop": "^10.0.9",
     "react-moment": "^1.1.1",
     "react-password-strength-bar": "^0.4.0",
     "react-phone-input-2": "^2.14.0",
