--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -11,6 +11,7 @@
     "add": "^2.0.6",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "compressorjs": "^1.2.1",
     "dotenv": "^10.0.0",
     "email-validator": "^2.0.4",
     "enzyme": "^3.11.0",
