--- a/healthkools/package.json
+++ b/healthkools/package.json
@@ -76,6 +76,13 @@
     ]
   },
   "devDependencies": {
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0"
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
+    "canvas": "^2.11.2",
+    "jest-fetch-mock": "^3.0.3"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "canvas": "<rootDir>/node_modules/canvas"
+    }
   }
 }
